--- a/styles/main.css
+++ b/styles/main.css
@@ -138,13 +138,13 @@ main .tab_content .tab1 .big a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 600px;
   height: 400px;
-  display: none;
-  display: none;
+  opacity: 0;
+  display: block;
   flex-flow: column wrap;
   justify-content: center;
   align-content: center;
   text-align: center;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 main .tab_content .tab1 .big a .span span {
   display: block;
@@ -155,7 +155,7 @@ main .tab_content .tab1 .big a .span span:first-child {
   padding-top: 180px;
 }
 main .tab_content .tab1 .big a:hover .span {
-  display: block;
+  opacity: 1;
 }
 main .tab_content .tab1 .thum {
   display: grid;
@@ -173,8 +173,9 @@ main .tab_content .tab1 .thum a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 200px;
   height: 200px;
-  display: none;
-  transition: all 1s;
+  display: block;
+  opacity: 0;
+  transition: all 0.5s;
 }
 main .tab_content .tab1 .thum a .span span {
   display: block;
@@ -184,8 +185,8 @@ main .tab_content .tab1 .thum a .span span {
 main .tab_content .tab1 .thum a .span span:first-child {
   padding-top: 70px;
 }
-main .tab_content .tab1 .thum a:hover div {
-  display: block;
+main .tab_content .tab1 .thum a:hover .span {
+  opacity: 1;
 }
 main .tab_content .tab1 .thum a:nth-child(1) {
   background: url(../images/6813e0b4f67103a4b2fd930127e9e6a4.jpg) no-repeat center;
@@ -244,13 +245,13 @@ main .tab_content .tab2 .big a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 600px;
   height: 400px;
-  display: none;
-  display: none;
+  opacity: 0;
+  display: block;
   flex-flow: column wrap;
   justify-content: center;
   align-content: center;
   text-align: center;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 main .tab_content .tab2 .big a .span span {
   display: block;
@@ -261,7 +262,7 @@ main .tab_content .tab2 .big a .span span:first-child {
   padding-top: 180px;
 }
 main .tab_content .tab2 .big a:hover .span {
-  display: block;
+  opacity: 1;
 }
 main .tab_content .tab2 .thum {
   display: grid;
@@ -279,8 +280,9 @@ main .tab_content .tab2 .thum a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 200px;
   height: 200px;
-  display: none;
-  transition: all 1s;
+  display: block;
+  opacity: 0;
+  transition: all 0.5s;
 }
 main .tab_content .tab2 .thum a .span span {
   display: block;
@@ -290,8 +292,8 @@ main .tab_content .tab2 .thum a .span span {
 main .tab_content .tab2 .thum a .span span:first-child {
   padding-top: 70px;
 }
-main .tab_content .tab2 .thum a:hover div {
-  display: block;
+main .tab_content .tab2 .thum a:hover .span {
+  opacity: 1;
 }
 main .tab_content .tab2 .thum a:nth-child(1) {
   background: url(../images/ddcb13f1d412cb7380962cb958c5001f.jpg) no-repeat center;
@@ -349,13 +351,13 @@ main .tab_content .tab3 .big a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 600px;
   height: 400px;
-  display: none;
-  display: none;
+  opacity: 0;
+  display: block;
   flex-flow: column wrap;
   justify-content: center;
   align-content: center;
   text-align: center;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 main .tab_content .tab3 .big a .span span {
   display: block;
@@ -366,7 +368,7 @@ main .tab_content .tab3 .big a .span span:first-child {
   padding-top: 180px;
 }
 main .tab_content .tab3 .big a:hover .span {
-  display: block;
+  opacity: 1;
 }
 main .tab_content .tab3 .thum {
   display: grid;
@@ -384,8 +386,9 @@ main .tab_content .tab3 .thum a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 200px;
   height: 200px;
-  display: none;
-  transition: all 1s;
+  display: block;
+  opacity: 0;
+  transition: all 0.5s;
 }
 main .tab_content .tab3 .thum a .span span {
   display: block;
@@ -395,8 +398,8 @@ main .tab_content .tab3 .thum a .span span {
 main .tab_content .tab3 .thum a .span span:first-child {
   padding-top: 70px;
 }
-main .tab_content .tab3 .thum a:hover div {
-  display: block;
+main .tab_content .tab3 .thum a:hover .span {
+  opacity: 1;
 }
 main .tab_content .tab3 .thum a:nth-child(1) {
   background: url(../images/6813e0b4f67103a4b2fd930127e9e6a4.jpg) no-repeat center;
@@ -455,13 +458,13 @@ main .tab_content .tab4 .big a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 600px;
   height: 400px;
-  display: none;
-  display: none;
+  opacity: 0;
+  display: block;
   flex-flow: column wrap;
   justify-content: center;
   align-content: center;
   text-align: center;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 main .tab_content .tab4 .big a .span span {
   display: block;
@@ -472,7 +475,7 @@ main .tab_content .tab4 .big a .span span:first-child {
   padding-top: 180px;
 }
 main .tab_content .tab4 .big a:hover .span {
-  display: block;
+  opacity: 1;
 }
 main .tab_content .tab4 .thum {
   display: grid;
@@ -490,8 +493,9 @@ main .tab_content .tab4 .thum a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 200px;
   height: 200px;
-  display: none;
-  transition: all 1s;
+  display: block;
+  opacity: 0;
+  transition: all 0.5s;
 }
 main .tab_content .tab4 .thum a .span span {
   display: block;
@@ -501,8 +505,8 @@ main .tab_content .tab4 .thum a .span span {
 main .tab_content .tab4 .thum a .span span:first-child {
   padding-top: 70px;
 }
-main .tab_content .tab4 .thum a:hover div {
-  display: block;
+main .tab_content .tab4 .thum a:hover .span {
+  opacity: 1;
 }
 main .tab_content .tab4 .thum a:nth-child(1) {
   background: url(../images/ddcb13f1d412cb7380962cb958c5001f.jpg) no-repeat center;
@@ -560,13 +564,13 @@ main .tab_content .tab5 .big a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 600px;
   height: 400px;
-  display: none;
-  display: none;
+  opacity: 0;
+  display: block;
   flex-flow: column wrap;
   justify-content: center;
   align-content: center;
   text-align: center;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 main .tab_content .tab5 .big a .span span {
   display: block;
@@ -577,7 +581,7 @@ main .tab_content .tab5 .big a .span span:first-child {
   padding-top: 180px;
 }
 main .tab_content .tab5 .big a:hover .span {
-  display: block;
+  opacity: 1;
 }
 main .tab_content .tab5 .thum {
   display: grid;
@@ -595,8 +599,9 @@ main .tab_content .tab5 .thum a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 200px;
   height: 200px;
-  display: none;
-  transition: all 1s;
+  display: block;
+  opacity: 0;
+  transition: all 0.5s;
 }
 main .tab_content .tab5 .thum a .span span {
   display: block;
@@ -606,8 +611,8 @@ main .tab_content .tab5 .thum a .span span {
 main .tab_content .tab5 .thum a .span span:first-child {
   padding-top: 70px;
 }
-main .tab_content .tab5 .thum a:hover div {
-  display: block;
+main .tab_content .tab5 .thum a:hover .span {
+  opacity: 1;
 }
 main .tab_content .tab5 .thum a:nth-child(1) {
   background: url(../images/6813e0b4f67103a4b2fd930127e9e6a4.jpg) no-repeat center;
@@ -666,13 +671,13 @@ main .tab_content .tab6 .big a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 600px;
   height: 400px;
-  display: none;
-  display: none;
+  opacity: 0;
+  display: block;
   flex-flow: column wrap;
   justify-content: center;
   align-content: center;
   text-align: center;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 main .tab_content .tab6 .big a .span span {
   display: block;
@@ -683,7 +688,7 @@ main .tab_content .tab6 .big a .span span:first-child {
   padding-top: 180px;
 }
 main .tab_content .tab6 .big a:hover .span {
-  display: block;
+  opacity: 1;
 }
 main .tab_content .tab6 .thum {
   display: grid;
@@ -701,8 +706,9 @@ main .tab_content .tab6 .thum a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 200px;
   height: 200px;
-  display: none;
-  transition: all 1s;
+  display: block;
+  opacity: 0;
+  transition: all 0.5s;
 }
 main .tab_content .tab6 .thum a .span span {
   display: block;
@@ -712,8 +718,8 @@ main .tab_content .tab6 .thum a .span span {
 main .tab_content .tab6 .thum a .span span:first-child {
   padding-top: 70px;
 }
-main .tab_content .tab6 .thum a:hover div {
-  display: block;
+main .tab_content .tab6 .thum a:hover .span {
+  opacity: 1;
 }
 main .tab_content .tab6 .thum a:nth-child(1) {
   background: url(../images/ddcb13f1d412cb7380962cb958c5001f.jpg) no-repeat center;
@@ -771,13 +777,13 @@ main .tab_content .tab7 .big a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 600px;
   height: 400px;
-  display: none;
-  display: none;
+  opacity: 0;
+  display: block;
   flex-flow: column wrap;
   justify-content: center;
   align-content: center;
   text-align: center;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 main .tab_content .tab7 .big a .span span {
   display: block;
@@ -788,7 +794,7 @@ main .tab_content .tab7 .big a .span span:first-child {
   padding-top: 180px;
 }
 main .tab_content .tab7 .big a:hover .span {
-  display: block;
+  opacity: 1;
 }
 main .tab_content .tab7 .thum {
   display: grid;
@@ -806,8 +812,9 @@ main .tab_content .tab7 .thum a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 200px;
   height: 200px;
-  display: none;
-  transition: all 1s;
+  display: block;
+  opacity: 0;
+  transition: all 0.5s;
 }
 main .tab_content .tab7 .thum a .span span {
   display: block;
@@ -817,8 +824,8 @@ main .tab_content .tab7 .thum a .span span {
 main .tab_content .tab7 .thum a .span span:first-child {
   padding-top: 70px;
 }
-main .tab_content .tab7 .thum a:hover div {
-  display: block;
+main .tab_content .tab7 .thum a:hover .span {
+  opacity: 1;
 }
 main .tab_content .tab7 .thum a:nth-child(1) {
   background: url(../images/6813e0b4f67103a4b2fd930127e9e6a4.jpg) no-repeat center;
@@ -877,13 +884,13 @@ main .tab_content .tab8 .big a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 600px;
   height: 400px;
-  display: none;
-  display: none;
+  opacity: 0;
+  display: block;
   flex-flow: column wrap;
   justify-content: center;
   align-content: center;
   text-align: center;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 main .tab_content .tab8 .big a .span span {
   display: block;
@@ -894,7 +901,7 @@ main .tab_content .tab8 .big a .span span:first-child {
   padding-top: 180px;
 }
 main .tab_content .tab8 .big a:hover .span {
-  display: block;
+  opacity: 1;
 }
 main .tab_content .tab8 .thum {
   display: grid;
@@ -912,8 +919,9 @@ main .tab_content .tab8 .thum a .span {
   background: rgba(2, 2, 2, 0.3);
   width: 200px;
   height: 200px;
-  display: none;
-  transition: all 1s;
+  display: block;
+  opacity: 0;
+  transition: all 0.5s;
 }
 main .tab_content .tab8 .thum a .span span {
   display: block;
@@ -923,8 +931,8 @@ main .tab_content .tab8 .thum a .span span {
 main .tab_content .tab8 .thum a .span span:first-child {
   padding-top: 70px;
 }
-main .tab_content .tab8 .thum a:hover div {
-  display: block;
+main .tab_content .tab8 .thum a:hover .span {
+  opacity: 1;
 }
 main .tab_content .tab8 .thum a:nth-child(1) {
   background: url(../images/ddcb13f1d412cb7380962cb958c5001f.jpg) no-repeat center;
